--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<!-- menu -->
 	
-	<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-default" role="navigation">
   <div class="container-fluid">
     <!-- Grupowanie "marki" i przycisku rozwijania mobilnego menu -->
     <div class="navbar-header">
@@ -36,11 +36,26 @@
 	
 	<!-- slider -->
 	
-	
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12 slider">
+		<h1>tekst</h1>
+		<button>dołącz do nas</button>
+	</div>
+  </div>
+</div>
 	
 	<!-- search -->
 	
+<div class="container">
+  <div class="row">
+    <div class="col-lg-1">parametry</div>
+    <div class="col-lg-1">mapa</div>
+  </div>
+</div>
+	
 	<!-- footer -->
   
+  <script src="assets/js/bootstrap.min.js"></script>
   </body>
 </html>
