--- a/index.html
+++ b/index.html
@@ -36,21 +36,17 @@
 	
 	<!-- slider -->
 	
-<div class="container">
-  <div class="row">
-    <div class="col-lg-12 slider">
+<div class="slider">
 		<h1>tekst</h1>
 		<button>dołącz do nas</button>
-	</div>
-  </div>
 </div>
 	
 	<!-- search -->
 	
 <div class="container">
   <div class="row">
-    <div class="col-lg-1">parametry</div>
-    <div class="col-lg-1">mapa</div>
+    <div class="col-md-4">parametry</div>
+    <div class="col-md-8">mapa</div>
   </div>
 </div>
 	
