--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	
 <div class="slider">
 		<h1>tekst</h1>
-		<button>dołącz do nas</button>
+		<button class="btn btn-success">dołącz do nas</button>
 </div>
 	
 	<!-- search -->
