--- a/index.html
+++ b/index.html
@@ -10,44 +10,50 @@
 
 	<!-- menu -->
 	
-<nav class="navbar navbar-default" role="navigation">
-  <div class="container-fluid">
-    <!-- Grupowanie "marki" i przycisku rozwijania mobilnego menu -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Rozwiń nawigację</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Close Enough</a>
-    </div> 
+<div class="container_page">
 	
+	<nav class="navbar navbar-default" role="navigation">
+	  <div class="container-fluid">
+		<!-- Grupowanie "marki" i przycisku rozwijania mobilnego menu -->
+		<div class="navbar-header">
+		  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+			<span class="sr-only">Rozwiń nawigację</span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+		  </button>
+		  <a class="navbar-brand" href="#">Close Enough</a>
+		</div> 
+		
 
-    <!-- Grupowanie elementów menu w celu lepszego wyświetlania na urządzeniach moblinych -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Zaloguj</a></li>
-        <li><a href="#">Rejestracja</a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-	
-	<!-- slider -->
-	
-<div class="slider">
-		<h1>tekst</h1>
-		<button class="btn btn-success">dołącz do nas</button>
-</div>
-	
-	<!-- search -->
-	
-<div class="container">
-  <div class="row">
-    <div class="col-md-4">parametry</div>
-    <div class="col-md-8">mapa</div>
-  </div>
+		<!-- Grupowanie elementów menu w celu lepszego wyświetlania na urządzeniach moblinych -->
+		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		  <ul class="nav navbar-nav navbar-right">
+			<li><a href="#logowanie">Zaloguj</a></li>
+			<li><a href="#rejestracja">Rejestracja</a></li>
+		  </ul>
+		</div><!-- /.navbar-collapse -->
+	  </div><!-- /.container-fluid -->
+	</nav>
+		
+		<!-- slider -->
+		
+	<div class="slider">
+			<h1>tekst</h1>
+			<div class="join">
+				<button class="btn btn-primary">Dołącz do nas</button>
+			</div>
+	</div>
+		
+		<!-- search -->
+		
+	<div class="container">
+	  <div class="row">
+		<div class="col-md-4">parametry</div>
+		<div class="col-md-8">mapa</div>
+	  </div>
+	</div>
+
 </div>
 	
 	<!-- footer -->
