--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
 				<button class="btn btn-primary">Dołącz do nas</button>
 			</div>
 	</div>
+<!--
+<div class="container slider">
+  <div class="jumbotron">
+	<h1>tekst</h1>
+			<div class="join">
+				<button class="btn btn-primary">Dołącz do nas</button>
+			</div>
+  </div>     
+</div>
+-->
 		
 		<!-- search -->
 		
