--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -59,7 +59,29 @@
 		
 	<div class="container">
 	  <div class="row">
-		<div class="col-md-4">parametry</div>
+		<div class="col-md-4"><div class="parameters">
+    <label for="job">Stanowisko</label>
+    <input type="email" class="form-control" id="InputJob" placeholder="Nazwa szukanego stanowiska">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">PHasło</label>
+    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Twoje tajne hasło">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputFile">Załączanie pliku</label>
+    <input type="file" id="exampleInputFile">
+    <p class="help-block">Tekst podpowiedzi</p>
+  </div>
+  <div class="checkbox">
+    <label>
+      <input type="checkbox"> Zaznacz mnie!
+    </label>
+  </div>
+  <button type="submit" class="btn btn-default">Wyślij!</button>
+</form>
+
+
+		</div>
 		<div class="col-md-8">mapa</div>
 	  </div>
 	</div>
