--- a/index.html
+++ b/index.html
@@ -60,9 +60,19 @@
 	<div class="container">
 	  <div class="row">
 		<div class="col-md-4"><div class="parameters">
+    <label for="time">Preferowany Czas</label>
+    <input type="email" class="form-control" id="InputTime" placeholder="Limit czasu na dojazd">
     <label for="job">Stanowisko</label>
-    <input type="email" class="form-control" id="InputJob" placeholder="Nazwa szukanego stanowiska">
-  </div>
+    <input type="email" class="form-control" id="InputJob" placeholder="Nazwa szukanego stanowiska">  
+
+	</div>
+
+
+
+
+
+
+
   <div class="form-group">
     <label for="exampleInputPassword1">PHasło</label>
     <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Twoje tajne hasło">
