--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	  <div class="row">
 		<div class="col-md-4"><div class="parameters">
     <label for="time">Preferowany Czas</label>
-    <input type="email" class="form-control" id="InputTime" placeholder="Limit czasu na dojazd">
+    <input type="number" class="form-control" id="InputTime" placeholder="Limit czasu na dojazd">
     <label for="job">Stanowisko</label>
     <input type="email" class="form-control" id="InputJob" placeholder="Nazwa szukanego stanowiska">  
 
