--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 		<!-- Grupowanie elementów menu w celu lepszego wyświetlania na urządzeniach moblinych -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		  <ul class="nav navbar-nav navbar-right">
+		  <ul class="nav navbar-nav navbar-right navbar-rightwing">
 			<li><a href="#logowanie">Zaloguj</a></li>
 			<li><a href="#rejestracja">Rejestracja</a></li>
 		  </ul>
