--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	<div class="container">
 	  <div class="row">
 		<div class="col-md-4"><div class="parameters">
-    <label for="time">Preferowany Czas</label>
+    <label for="time">Preferowany Czas [min] </label>
     <input type="number" class="form-control" id="InputTime" placeholder="Limit czasu na dojazd">
     <label for="job">Stanowisko</label>
     <input type="email" class="form-control" id="InputJob" placeholder="Nazwa szukanego stanowiska">  
