--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
     <label for="time">Preferowany Czas [min] </label>
     <input type="number" class="form-control" id="InputTime" placeholder="Limit czasu na dojazd">
     <label for="job">Stanowisko</label>
+    <select name="position">
+    <option value="Sofware Developer">Sofware Developer</option>    
+    <option value="Graphical Designer">Graphical Designer</option>
+    <option value="Software Tester">Sofware Tester</option>
+    </select>
     <input type="email" class="form-control" id="InputJob" placeholder="Nazwa szukanego stanowiska">  
 
 	</div>
@@ -72,22 +77,6 @@
 
 
 
-
-  <div class="form-group">
-    <label for="exampleInputPassword1">PHasło</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Twoje tajne hasło">
-  </div>
-  <div class="form-group">
-    <label for="exampleInputFile">Załączanie pliku</label>
-    <input type="file" id="exampleInputFile">
-    <p class="help-block">Tekst podpowiedzi</p>
-  </div>
-  <div class="checkbox">
-    <label>
-      <input type="checkbox"> Zaznacz mnie!
-    </label>
-  </div>
-  <button type="submit" class="btn btn-default">Wyślij!</button>
 </form>
 
 
