--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
 	
 	<!-- footer -->
   
+  <script src="assets/js/jquery-3.2.1.min.js"></script>
   <script src="assets/js/bootstrap.min.js"></script>
+  <script src="assets/js/jquery-ui.min.js"></script>
   </body>
 </html>
