--- a/index.html
+++ b/index.html
@@ -63,12 +63,11 @@
     <label for="time">Preferowany Czas [min] </label>
     <input type="number" class="form-control" id="InputTime" placeholder="Limit czasu na dojazd">
     <label for="job">Stanowisko</label>
-    <select name="position">
-    <option value="Sofware Developer">Sofware Developer</option>    
-    <option value="Graphical Designer">Graphical Designer</option>
-    <option value="Software Tester">Sofware Tester</option>
-    </select>
-    <input type="email" class="form-control" id="InputJob" placeholder="Nazwa szukanego stanowiska">  
+    <select class="form-control" name="position">
+		<option value="Sofware Developer">Sofware Developer</option>    
+		<option value="Graphical Designer">Graphical Designer</option>
+		<option value="Software Tester">Sofware Tester</option>
+    </select> 
 
 	</div>
 
