--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
 
 	<!-- menu -->
-	
+
 <div class="container_page">
-	
+
 	<nav class="navbar navbar-default" role="navigation">
 	  <div class="container-fluid">
 		<!-- Grupowanie "marki" i przycisku rozwijania mobilnego menu -->
@@ -23,8 +23,8 @@
 			<span class="icon-bar"></span>
 		  </button>
 		  <a class="navbar-brand" href="#">Close Enough</a>
-		</div> 
-		
+		</div>
+
 
 		<!-- Grupowanie elementów menu w celu lepszego wyświetlania na urządzeniach moblinych -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -35,9 +35,9 @@
 		</div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>
-		
+
 		<!-- slider -->
-		
+
 	<div class="slider">
 			<h1>tekst</h1>
 			<div class="join">
@@ -51,12 +51,12 @@
 			<div class="join">
 				<button class="btn btn-primary">Dołącz do nas</button>
 			</div>
-  </div>     
+  </div>
 </div>
 -->
-		
+
 		<!-- search -->
-		
+
 	<div class="container">
 	  <div class="row">
 		<div class="col-md-4"><div class="parameters">
@@ -65,11 +65,11 @@
     <label for="job">Stanowisko</label>
     <select class="form-control" name="position">
 
-    <option value="Sofware Developer">Sofware Developer</option>    
+    <option value="Sofware Developer">Sofware Developer</option>
     <option value="Graphical Designer">Graphical Designer</option>
     <option value="Software Tester">Sofware Tester</option>
     </select>
-	
+
     <script>
   $( function() {
     $( "#slider-range" ).slider({
@@ -98,16 +98,27 @@
 
 
 		</div>
-		<div class="col-md-8">mapa</div>
+    <select id="mode">
+      <option value="DRIVING">Driving</option>
+      <option value="WALKING">Walking</option>
+      <option value="BICYCLING">Bicycling</option>
+      <option value="TRANSIT">Transit</option>
+    </select>
+		<div class="col-md-8" id="map">
+
+		</div>
 	  </div>
 	</div>
 
 </div>
-	
+
 	<!-- footer -->
-  
+  <script async defer
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDzrzKRCW-Prb60UHlYadM7iQ4pnWSzV7k&callback=initMap">
+  </script>
   <script src="assets/js/jquery-3.2.1.min.js"></script>
   <script src="assets/js/bootstrap.min.js"></script>
   <script src="assets/js/jquery-ui.min.js"></script>
+  <script src="assets/js/map.js"></script>
   </body>
 </html>
