--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 </select>
 
 
-
+<button class="btn btn-primary" id="search">Wyszukaj</button>
 
 </div>
   
@@ -187,6 +187,7 @@
 <script src="assets/js/jquery-ui.min.js"></script>
   <script src="assets/js/map.js"></script>
   
+  <script src="assets/js/search.js"></script>
 </body>
 
 </html>
