--- a/index.html
+++ b/index.html
@@ -160,8 +160,9 @@
     
 </select>
 
+<br />
 
-<button class="btn btn-primary" id="search">Wyszukaj</button>
+<button class="btn btn-warning form-control" id="search">Wyszukaj</button>
 
 </div>
   
