--- a/index.html
+++ b/index.html
@@ -120,6 +120,16 @@
 		
 <!-- search -->
 
+<div class="container">
+	  
+	<div class="row">
+		
+		<h1 class="center"> Interesujące oferty w twojej okolicy </h1>
+		
+	</div>
+
+</div>
+
 	<div class="container">
 	  
 <div class="row">
@@ -159,6 +169,10 @@
 <option value="TRANSIT">Komunikacja Miejska</option>
     
 </select>
+
+<br />
+
+<div class="alert alert-warning">Pamiętaj o wybraniu swojej lokalizacji na mapie po prawej stronie</div>
 
 <br />
 
