--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 	  
 	<div class="row">
 		
-		<h1 class="center"> Interesujące oferty w twojej okolicy </h1>
+		<h1 class="title_template"> Interesujące oferty w twojej okolicy </h1>
 		
 	</div>
 
@@ -174,7 +174,6 @@
 
 <div class="alert alert-warning">Pamiętaj o wybraniu swojej lokalizacji na mapie po prawej stronie</div>
 
-<br />
 
 <button class="btn btn-warning form-control" id="search">Wyszukaj</button>
 
