--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
 	  
 <div class="row">
 
-<input type=hidden value=0 id=localization_x />
-<input type=hidden value=0 id=localization_y />
+<input type=text value="0" id=localization_x name=localization_x />
+<input type=text value="0" id=localization_y name=localization_y />
 		
 <div class="col-md-4"><div class="parameters">
     
