--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
 	  
 <div class="row">
 
-<input type=text value="0" id=localization_x name=localization_x />
-<input type=text value="0" id=localization_y name=localization_y />
+<input type=hidden value="0" id=localization_x name=localization_x />
+<input type=hidden value="0" id=localization_y name=localization_y />
 		
 <div class="col-md-4"><div class="parameters">
     
@@ -178,6 +178,8 @@
 <div class="alert alert-warning">Pamiętaj o wybraniu swojej lokalizacji na mapie po prawej stronie</div>
 
 <button class="btn btn-warning form-control" id="search">Wyszukaj</button>
+
+<div class="alert alert-danger" id="error_search"></div>
 
 </div>
   
