Wersja Aktualna As

--- a/index.html
+++ b/index.html
@@ -193,6 +193,46 @@
 
 </div>
 
+<!-- Profil -->
+
+<div class="container" id="Profile">
+	  
+	<div class="row">
+		
+		<h1 class="title_template"> Profil Specjalisty </h1>
+		
+	</div>
+
+	<div class="row">
+		
+			
+			<div class="row">
+     			        <div class="col-md-3"><img id="user_photo" src="http://placehold.it/200x200" alt="..."></div>
+				<div class="col-md-4"><label for="experience_field" class="title_desc">Doświadczenie:</label><div id="experience_cont"></div></div>
+				<div class="col-md-5"><label for="skills_field" class="title_desc">Umiejętności i Stosowane Technologie:</label><div id="skills_cont"></div></div>
+			</div>
+			<div class="row"><label for="description_title" class="title_desc">Kilka słów opisu:</label></div>
+			<div class="row" class="user_description" id="desc_cont">
+			
+			</div>
+			<div class="row"><label for="links_title" class="title_desc">Linki zewnętrzne:</label></div>
+			<div class="row" class="user_links" id="links_cont">
+
+			</div>
+			<div class="row contact" >
+			<button class="btn btn-primary">Kontakt</button>
+			</div>
+
+
+
+	</div>
+
+</div>
+
+<!-- Koniec Profilu -->
+
+
+	
 
 <!-- footer -->
   <script async defer
@@ -204,7 +244,7 @@
 
 <script src="assets/js/jquery-ui.min.js"></script>
   <script src="assets/js/map.js"></script>
-
+  <script src="assets/js/show_profile_and_offer.js"></script>
   <script src="assets/js/search.js"></script>
 </body>
 
