--- a/index.html
+++ b/index.html
@@ -231,6 +231,43 @@
 
 <!-- Koniec Profilu -->
 
+<!-- Profil -->
+
+<div class="container" id="Offer">
+	  
+	<div class="row">
+		
+		<h1 class="title_template"> Oferta </h1>
+		
+	</div>
+
+	<div class="row">
+		
+			
+			<div class="row">
+     			        <div class="col-md-3"><img id="offer_photo" src="http://placehold.it/200x200" alt="..."></div>
+				<div class="col-md-5"><label for="skills_field" class="title_desc">Stanowisko:</label><div id="position_cont"></div></div>
+			</div>
+			<div class="row">
+				<div class="col-md-5"><label for="skills_field" class="title_desc">Wynagrodzenie:</label><div id="salary_cont"></div></div>
+				<div class="col-md-5"><label for="skills_field" class="title_desc">Adres:</label><div id="address_cont"></div></div>
+			</div>
+			<div class="row"><label for="description_title" class="title_desc">Kilka słów opisu:</label></div>
+			<div class="row" class="user_description" id="offer_cont">
+			
+			</div>
+			<div class="row contact" >
+			<button class="btn btn-primary">Aplikuj</button>
+			</div>
+
+
+
+	</div>
+
+</div>
+
+<!-- Koniec Profilu -->
+
 
 	
 
