--- a/index.html
+++ b/index.html
@@ -195,6 +195,9 @@
 
 <!-- Profil -->
 
+<button id=test_01>test profil</button>
+<button id=test_02>test oferta</button>
+
 <div class="container" id="Profile">
 	  
 	<div class="row">
@@ -246,14 +249,14 @@
 			
 			<div class="row">
      			        <div class="col-md-3"><img id="offer_photo" src="http://placehold.it/200x200" alt="..."></div>
-				<div class="col-md-5"><label for="skills_field" class="title_desc">Stanowisko:</label><div id="position_cont"></div></div>
+				<div class="col-md-5"><label for="skills_field" class="title_desc">Stanowisko:</label><div id="offer_position_cont"></div></div>
 			</div>
 			<div class="row">
-				<div class="col-md-5"><label for="skills_field" class="title_desc">Wynagrodzenie:</label><div id="salary_cont"></div></div>
-				<div class="col-md-5"><label for="skills_field" class="title_desc">Adres:</label><div id="address_cont"></div></div>
+				<div class="col-md-5"><label for="skills_field" class="title_desc">Wynagrodzenie:</label><div id="offer_salary_cont"></div></div>
+				<div class="col-md-5"><label for="skills_field" class="title_desc">Adres:</label><div id="offer_address_cont"></div></div>
 			</div>
 			<div class="row"><label for="description_title" class="title_desc">Kilka słów opisu:</label></div>
-			<div class="row" class="user_description" id="offer_cont">
+			<div class="row" class="user_description" id="offer_desc_cont">
 			
 			</div>
 			<div class="row contact" >
