--- a/index.html
+++ b/index.html
@@ -199,16 +199,16 @@
 <button id=test_02>test oferta</button>
 
 <div class="container" id="Profile">
-	  
+
 	<div class="row">
-		
+
 		<h1 class="title_template"> Profil Specjalisty </h1>
-		
+
 	</div>
 
 	<div class="row">
-		
-			
+
+
 			<div class="row">
      			        <div class="col-md-3"><img id="user_photo" src="http://placehold.it/200x200" alt="..."></div>
 				<div class="col-md-4"><label for="experience_field" class="title_desc">Doświadczenie:</label><div id="experience_cont"></div></div>
@@ -216,7 +216,7 @@
 			</div>
 			<div class="row"><label for="description_title" class="title_desc">Kilka słów opisu:</label></div>
 			<div class="row" class="user_description" id="desc_cont">
-			
+
 			</div>
 			<div class="row"><label for="links_title" class="title_desc">Linki zewnętrzne:</label></div>
 			<div class="row" class="user_links" id="links_cont">
@@ -237,16 +237,16 @@
 <!-- Profil -->
 
 <div class="container" id="Offer">
-	  
+
 	<div class="row">
-		
+
 		<h1 class="title_template"> Oferta </h1>
-		
+
 	</div>
 
 	<div class="row">
-		
-			
+
+
 			<div class="row">
      			        <div class="col-md-3"><img id="offer_photo" src="http://placehold.it/200x200" alt="..."></div>
 				<div class="col-md-5"><label for="skills_field" class="title_desc">Stanowisko:</label><div id="offer_position_cont"></div></div>
@@ -257,7 +257,7 @@
 			</div>
 			<div class="row"><label for="description_title" class="title_desc">Kilka słów opisu:</label></div>
 			<div class="row" class="user_description" id="offer_desc_cont">
-			
+
 			</div>
 			<div class="row contact" >
 			<button class="btn btn-primary">Aplikuj</button>
@@ -272,9 +272,11 @@
 <!-- Koniec Profilu -->
 
 
-	
+
 
 <!-- footer -->
+
+<div style={"visibility":"hidden"} id="radius"></div>
   <script async defer
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDzrzKRCW-Prb60UHlYadM7iQ4pnWSzV7k&callback=initMap">
 
